<resources>
    <string name="app_name">Dep</string>
    <string name="new_user_click_here_to_register">New User? Click Here to Register</string>
    <string name="already_an_user_click_here_to_login">Already an User? Log In</string>

    <string name="full_name">Abby Sandel</string>
    <string name="back_to_home">Back to\nHome</string>
    <string name="username_title">Username</string>
    <string name="username">"@abby_sandel"</string>
    <string name="phone_title">Phone</string>
    <string name="phone">+000 00 000 000</string>
    <string name="address_title">Address</string>
    <string name="address">City, Street</string>
    <string name="email_title">Email</string>
    <string name="email">goldenperfecttv@gmail.com</string>

<!--data for doctor-->
    <string name="fever">Fever (°C) <font color='#FF0000'>*</font></string>

<!--collect data activity-->
    <string name="patient_name">Patient Name <font color='#FF0000'>*</font></string>
    <string name="doc">Date of collection <font color='#FF0000'>*</font></string>
    <string name="age">Age <font color='#FF0000'>*</font></string>
    <string name="village">Village <font color='#FF0000'>*</font></string>
    <string name="mobile">Mobile No. <font color='#FF0000'>*</font></string>

<!--new user activity-->
    <string name="worker_name">Name of worker <font color='#FF0000'>*</font></string>
    <string name="mail">Email <font color='#FF0000'>*</font></string>
    <string name="code">Center Code <font color='#FF0000'>*</font></string>
    <string name="dob">Date of birth <font color='#FF0000'>*</font></string>
    <string name="gender">Gender <font color='#FF0000'>*</font></string>
    <string name="category">Category <font color='#FF0000'>*</font></string>

</resources>